egonlang-core/res/examples/valid/fn_expr_returning_fn_expr.eg
(a: number, b: number): function<tuple<number>, number> => (c: number): number => { 123 };