egonlang-core/res/examples/invalid/const_decl_typed_with_assign_chain_typed.eg
const a: Number = b: Number = 123;

// out: SyntaxError: unexpected ":"; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]